# django-ibmi

./: .bumpversion.cfg  .gitignore  README.md  TESTS.md  pyproject.toml
.github/workflows/: python-package.yml
contributing/: CONTRIBUTING.md
django_ibmi/: base.py  client.py  compiler.py  creation.py  features.py  introspection.py  operations.py  pybase.py  query.py  schema.py  schemaEditor.py
ibm_db_django/: base.py  client.py  introspection.py  schemaEditor.py
