[tool.poetry]
name = "django-ibmi"
version = "0.1.0-dev"
description = "'Db2 for i support for Django framework'"
authors = [
    "Naveen Ram  <naveen.ram@ibm.com>,
    Kevin Adler <kadler@us.ibm.com>"
]
maintainer='IBM i Open Source Software Team'
readme = "README.md"
license = "Apache-2.0"
keywords = ["django", "web framework", "ibm", "ibmi", "db2"]
packages = [
    {include = "django_ibmi"}
]

[tool.poetry.plugin."django_ibmi"]
django_ibmi = "django_ibmi"

[tool.poetry.dependencies]
python = ">=2.7"
Django = ">=2.0.0"
pyodbc = ">=4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
