[tool.poetry]
name = "django-ibmi"
version = "0.1.0-dev"
description = "Db2 for i adapter for Django"
authors = [
    "Naveen Ram  <naveen.ram@ibm.com>",
    "Kevin Adler <kadler@us.ibm.com>"
]
readme = "README.md"
license = "Apache-2.0"
keywords = ["django", "web framework", "ibm", "ibmi", "db2"]
classifiers =[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Framework :: Django :: 2.2",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
]
packages = [
    {include = "django_ibmi"}
]

[tool.poetry.dependencies]
python = ">=3.5"
Django = ">=2.2"
pyodbc = ">=4.0"

[tool.poetry.plugin."django_ibmi"]
django_ibmi = "django_ibmi"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
